samples/_failures_safe/1761310633_c8ad12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f6767fd.c: In function ‘main’:
./samples/SAFE/__tmp_5f6767fd.c:118:29: error: expected ‘)’ at end of input
  118 |     if (scanf("%d %d", &mat2
      |              ~              ^
      |                             )
./samples/SAFE/__tmp_5f6767fd.c:118:5: error: expected declaration or statement at end of input
  118 |     if (scanf("%d %d", &mat2
      |     ^~
